--- a/index.html
+++ b/index.html
@@ -465,15 +465,15 @@
 </div>
 
 <div class="DriversPage">
- <li> <a href="https://dl.dropbox.com/s/pb3wk34byvihfmm/Team%20Roster%20%28new%29.html?dl=0">Drivers</a></li>
+ <li> <a href="#">Drivers</a></li>
 </div>
 
 <div class="Gallery">
-  <li><a href="https://dl.dropbox.com/s/hk0kn3luzjhfg5f/Gallery%28New%29.html?dl=0">Gallery</a></li>
+  <li><a href="#">Gallery</a></li>
 </div>
 
 <div class="TeamSuccess">
-  <li><a href="https://dl.dropbox.com/s/indbs6l9q30a4sk/Certificates%20%28new%29.html?dl=0">Team Success</a></li>
+  <li><a href="#">Team Success</a></li>
 </div>
 
 <div class="SponsorsPage">
@@ -485,7 +485,7 @@
 </div>
 
 <div class="RedDevilutionTV">
-  <li><a href="https://dl.dropbox.com/s/jx6bv9qzhh7yd2h/RedDevils%20Media.html?dl=0">Media</a></li>
+  <li><a href="#">Media</a></li>
 </div>
 
 <div class="Forum">
