--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 </div>
 
 <div class="DriversPage">
- <li> <a href="#">Drivers</a></li>
+ <li> <a href="#DriverLink">Drivers</a></li>
 </div>
 
 <div class="Gallery">
@@ -496,7 +496,7 @@
 
 <div class="InnerBannerWrapper">
 <div class="InnerBannerDriver">
-<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/pagestyling_zpsrysdbzp9.png" border="0" alt=" photo pagestyling_zpsrysdbzp9.png"/>
+<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/pagestyling_zpsrysdbzp9.png" border="0" alt=" photo pagestyling_zpsrysdbzp9.png"id="DriverLink"/>
 </div>
 
 <div class="InnerBannerGallery">
