--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
 <ul>
 <div class="Home">
-<li><a href="https://dl.dropbox.com/s/e0k7dbxax0xmvcz/Home%20Page%20%28New%29.html?dl=0">Home</a></li>
+<li><a href="reddevilssimracing.co.uk">Home</a></li>
 </div>
 
 <div class="DriversPage">
@@ -469,11 +469,11 @@
 </div>
 
 <div class="Gallery">
-  <li><a href="#">Gallery</a></li>
+  <li><a href="#GalleryLink">Gallery</a></li>
 </div>
 
 <div class="TeamSuccess">
-  <li><a href="#">Team Success</a></li>
+  <li><a href="#SuccessLink">Team Success</a></li>
 </div>
 
 <div class="SponsorsPage">
@@ -485,7 +485,7 @@
 </div>
 
 <div class="RedDevilutionTV">
-  <li><a href="#">Media</a></li>
+  <li><a href="#MediaLink">Media</a></li>
 </div>
 
 <div class="Forum">
@@ -500,15 +500,15 @@
 </div>
 
 <div class="InnerBannerGallery">
-<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/pagestyling_zpsrysdbzp9.png" border="0" alt=" photo pagestyling_zpsrysdbzp9.png"/>
+<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/pagestyling_zpsrysdbzp9.png" border="0" alt=" photo pagestyling_zpsrysdbzp9.png"id="GalleryLink"/>
 </div>
 
 <div class="InnerBannerSuccess">
-<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/pagestyling_zpsrysdbzp9.png" border="0" alt=" photo pagestyling_zpsrysdbzp9.png"/>
+<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/pagestyling_zpsrysdbzp9.png" border="0" alt=" photo pagestyling_zpsrysdbzp9.png"id="SuccessLink"/>
 </div>
 
 <div class="InnerBannerMedia">
-<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/pagestyling_zpsrysdbzp9.png" border="0" alt=" photo pagestyling_zpsrysdbzp9.png"/>
+<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/pagestyling_zpsrysdbzp9.png" border="0" alt=" photo pagestyling_zpsrysdbzp9.png"id="MediaLink"/>
 </div>
 </div>
 
