--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
 
 <div class="Banner">
-<a href="reddevilssimracing.co.uk">
+<a href="http://reddevilssimracing.co.uk">
 <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/aaa_zpslfzzusfi.png" border="0" alt=" photo aaa_zpslfzzusfi.png"/></a>
 </div>
 
@@ -461,7 +461,7 @@
 
 <ul>
 <div class="Home">
-<li><a href="reddevilssimracing.co.uk">Home</a></li>
+<li><a href="http://reddevilssimracing.co.uk">Home</a></li>
 </div>
 
 <div class="DriversPage">
