--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 <div class="video">
 <iframe width="954" height="560" src="https://www.youtube.com/embed/TKO5_hDc5JQ" frameborder="0" allowfullscreen></iframe>
 <div class="video2">
-<iframe width="954" height="560" src="https://www.youtube.com/watch?v=Fa-BJuHlDSQ" frameborder="0" allowfullscreen></iframe>
+<iframe width="954" height="560" src="https://www.youtube.com/embed/Fa-BJuHlDSQ" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
 
