--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         left: 0;
         right: 0;
         width: 1464px;
-        height: 11000px;
+        height: 13000px;
         box-shadow: 6px 6px 40px grey; 
         -webkit-box-shadow: 3px 3px 30px grey;
         -moz-box-shadow: 3px 3px 30px grey;
@@ -56,7 +56,7 @@
     -ms-transform: rotate(10deg);
       transform: rotate(10deg);}
 
- p{color:red;postion:relative;}
+ p{color:red;position:relative;}
 
  .AllCertificates img     {Border:4px solid red;height:300px;width:400px;margin-bottom:30px;margin-right:30px;box-shadow: 3px 3px 10px grey; -webkit-box-shadow: 3px 3px 10px grey; -moz-box-shadow: 3px 3px 10px grey;}
 
@@ -65,6 +65,7 @@
   
   .video        {position:absolute;top:9510px;left:250px;}
   .video2       {position:relative;top:0px;}
+  .video3       {position:relative;top:0px;}
   .NavBar       {list-style-type:none;} 
   ul            {list-style-type: none; padding: 0;} 
   li            {float:left;border-top: 4px solid red;border-bottom: 4px solid red;list-style-type:none;} 
@@ -155,7 +156,7 @@
     .Drivers {position:absolute;top:1080px;left:50px;width:1500px;}
     .Drivers img {margin-right:10px;margin-bottom:20px;}
 
-     .photoContainer {position:absolute;top:2490px;left:50px;align-right;width:1464px;}
+     .photoContainer {position:absolute;top:2490px;left:50px;width:1464px;}
      .photoContainer img {height:240px;border:7px solid white;margin-bottom:50px;margin-right:40px;box-shadow: 5px 5px 16px grey; -webkit-box-shadow: 5px 5px 16px grey; -moz-box-shadow: 5px 5px 16px grey;}
      .photoContainer  a img:hover {border:solid 7px #4AAEEE}
 
