--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
 .AllCertificates        {position:absolute;top:4520px;left:80px; margin-bottom: 50px;margin-right:50px;align:right;width:1500px;}
 
   
-  .video        {position:absolute;top:9510px;left:250px;}
-  .video2       {position:relative;top:50px;}
-  .video3       {position:relative;top:50px;}
+  .video        {position:absolute;top:9510px;left:250px;margin-bottom:50px;}
   .NavBar       {list-style-type:none;} 
   ul            {list-style-type: none; padding: 0;} 
   li            {float:left;border-top: 4px solid red;border-bottom: 4px solid red;list-style-type:none;} 
