--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   
   .video        {position:absolute;top:9510px;left:250px;}
-  .video img    {margin-bottom:50px;}
+  .videocontainer {position:relative;margin-bottom:50px;}
   .NavBar       {list-style-type:none;} 
   ul            {list-style-type: none; padding: 0;} 
   li            {float:left;border-top: 4px solid red;border-bottom: 4px solid red;list-style-type:none;} 
@@ -402,12 +402,14 @@
 <H1>MEDIA </H1>
 </div>
 <div class="video">
+ <div class="videocontainter">
 <iframe width="954" height="560" src="https://www.youtube.com/embed/TKO5_hDc5JQ" frameborder="0" allowfullscreen></iframe>
 <div class="video2">
 <iframe width="954" height="560" src="https://www.youtube.com/embed/Fa-BJuHlDSQ" frameborder="0" allowfullscreen></iframe>
   </div>
 <div class="video3">
 <iframe width="954" height="560" src="https://www.youtube.com/embed/J7On1ZWL9JI" frameborder="0" allowfullscreen></iframe>
+   </div>
   </div>
 </div>
 
