--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 
   
   .video        {position:absolute;top:9510px;left:250px;}
-  .video2       {position:relative;top:100px;}
-  .video3       {position:relative;top:100px;}
+  .videocontainer       {position:relative;top:25px;}
   .NavBar       {list-style-type:none;} 
   ul            {list-style-type: none; padding: 0;} 
   li            {float:left;border-top: 4px solid red;border-bottom: 4px solid red;list-style-type:none;} 
