--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
 <meta name="description" content="Red Devils Sim Racing is a UK based sim racing team competing on Iracing. Join us on our journey to the top of simracing!">
 <style>
-
-
   
     .pageContainer {
         position: absolute;
@@ -27,7 +25,6 @@
         -webkit-box-shadow: 3px 3px 30px grey;
         -moz-box-shadow: 3px 3px 30px grey;
         background-color:black;}
-
   .tilt img {
      -webkit-transition: all 0.5s ease;
      -moz-transition: all 0.5s ease;
@@ -41,7 +38,6 @@
     -o-transform: rotate(-10deg);
     -ms-transform: rotate(-10deg);
       transform: rotate(-10deg);}
-
    .tiltright img {
      -webkit-transition: all 0.5s ease;
      -moz-transition: all 0.5s ease;
@@ -55,15 +51,11 @@
     -o-transform: rotate(10deg);
     -ms-transform: rotate(10deg);
       transform: rotate(10deg);}
-
  p{color:red;position:relative;}
-
  .AllCertificates img     {Border:4px solid red;height:300px;width:400px;margin-bottom:30px;margin-right:30px;box-shadow: 3px 3px 10px grey; -webkit-box-shadow: 3px 3px 10px grey; -moz-box-shadow: 3px 3px 10px grey;}
-
-.AllCertificates        {position:absolute;top:4520px;left:80px; margin-bottom: 50px;margin-right:50px;align:right;width:1500px;}
-
+.AllCertificates        {position:absolute;top:5520px;left:80px; margin-bottom: 50px;margin-right:50px;align:right;width:1500px;}
   
-  .video        {position:absolute;top:9510px;left:250px;}
+  .video        {position:absolute;top:10510px;left:250px;}
   .video2       {position:relative;top:40px;}
   .video3       {position:relative;top:100px;}
   .NavBar       {list-style-type:none;} 
@@ -71,19 +63,15 @@
   li            {float:left;border-top: 4px solid red;border-bottom: 4px solid red;list-style-type:none;} 
    ul li a       {display:block; width: 184px;position:relative;top:0px; font-family:calibri;text-decoration:none; text-align:center;font-size:25px;color:white;background:url('https://dl.dropbox.com/s/bzut702znopm4qg/Steel.jpg?dl=0')}
      a:hover       {color:red;}
-
    .Nav        {list-style-type:none;} 
   .Nav ul            {list-style-type: none; padding: 0;} 
   .Nav li            {float:left;list-style-type:none;} 
    .Nav ul li a       {display:block; width: 184px;position:relative;top:0px; font-family:calibri;text-decoration:none; text-align:center;font-size:25px;color:white;background:url('https://dl.dropbox.com/s/bzut702znopm4qg/Steel.jpg?dl=0')}
      .Nav a:hover       {color:red;}
-
   
     
  
   body          {margin: 0;padding: 0;}
-
-
   .Home {position:absolute;top:223px;left:0px;}
   .DriversPage{position:absolute;top:223px;left:184px;}
   .Gallery{position:absolute;top:223px;left:368px;}
@@ -92,13 +80,11 @@
   .JoinUsPage {position:absolute;top:223px;left:918px;}
   .RedDevilutionTV{position:absolute;top:223px;left:1100px;}
   .Forum{position:absolute;top:223px;left:1280px;}
-
    H6 {font-family:Meiryo; color:white;position:absolute;top:130px;left:360px;font-size:20px;text-shadow: 0 0 9px red;}
-
-  .DriversHeading {position:absolute;top:905px;left:25px;z-index:999;}
-  .GalleryHeading {position:absolute;top:2320px;left:25px;z-index:999;}
-  .SuccessHeading {position:absolute;top:4340px;left:25px;z-index:999;}
-  .MediaHeader {position:absolute;top:9340px;left:25px;z-index:999;}
+  .DriversHeading {position:absolute;top:1905px;left:25px;z-index:999;}
+  .GalleryHeading {position:absolute;top:3320px;left:25px;z-index:999;}
+  .SuccessHeading {position:absolute;top:5340px;left:25px;z-index:999;}
+  .MediaHeader {position:absolute;top:10340px;left:25px;z-index:999;}
    H1{font-family:"Arial Nova Light";font-size:80px;color:white;}
   
   .RedDevilutionTVBanner a img:hover {border:3px solid white;}
@@ -111,31 +97,22 @@
   .Banner img   {position:absolute;top:0px;left:200px;height:220px;width:1210px;}       
   .Merchandise img  {border:4px solid red;height:200px;width:200px;position:absolute;left:15px; top:680px;box-shadow: 3px 3px 10px grey; -webkit-box-shadow: 3px 3px 10px grey; -moz-box-shadow: 3px 3px 10px grey;}
   .IRacinglogo img {position:absolute;top:690px;left:1233px;border:4px solid red;height:200px;150px;box-shadow: 3px 3px 10px grey; -webkit-box-shadow: 3px 3px 10px grey; -moz-box-shadow: 3px 3px 10px grey;}
-
   .RRTVLogo img {position:absolute;top:5060px;left:0px;}
   .WorldCup img {position:absolute;top:5060px;left:225px;} 
   .BSRTV img {position:absolute;top:5060px;left:476px;}
   .AORTV {position:absolute;top:5060px;left:663px;}
   .RaceSpotTV img {position:absolute;top:5060px;left:1010px;}
   .GSRCTV {position:absolute;top:5060px;left:1159px;}
-
   .nav {position:absolute;margin:auto;width:1440px;height:70px;left:0px;right:0px;background-color:#4B3F3D;}
   .navi {position:fixed;top:0px;left:0px;z-index:999;width:100%;} 
-
    
   .InnerBannerWrapper img {position:absolute;width:1464px;height:129px;}
-  .innerbannerDriver {position:absolute;top:915px;}
-  .innerbannerGallery {position:absolute;top:2330px;}
-  .InnerBannerSuccess {position:absolute;top:4350px;}
-  .InnerBannerMedia {position:absolute;top:9350px;}
-
-
-
-
-
+  .innerbannerDriver {position:absolute;top:1915px;}
+  .innerbannerGallery {position:absolute;top:3330px;}
+  .InnerBannerSuccess {position:absolute;top:5350px;}
+  .InnerBannerMedia {position:absolute;top:10350px;}
   
     .Drivers a img:hover {border:3px solid white} 
-
     .tilt img {
      -webkit-transition: all 0.5s ease;
      -moz-transition: all 0.5s ease;
@@ -149,18 +126,21 @@
     -o-transform: rotate(-10deg);
     -ms-transform: rotate(-10deg);
       transform: rotate(-10deg);}
-
-
-
     .DriversGallery img {border:4px solid red;box-shadow: 3px 3px 10px grey; -webkit-box-shadow: 3px 3px 10px grey; -moz-box-shadow: 3px 3px 10px grey;}
-    .Drivers {position:absolute;top:1080px;left:50px;width:1500px;}
+    .Drivers {position:absolute;top:2080px;left:50px;width:1500px;}
     .Drivers img {margin-right:10px;margin-bottom:20px;}
-
-     .photoContainer {position:absolute;top:2490px;left:50px;width:1464px;}
+     .photoContainer {position:absolute;top:3490px;left:50px;width:1464px;}
      .photoContainer img {height:240px;border:7px solid white;margin-bottom:50px;margin-right:40px;box-shadow: 5px 5px 16px grey; -webkit-box-shadow: 5px 5px 16px grey; -moz-box-shadow: 5px 5px 16px grey;}
      .photoContainer  a img:hover {border:solid 7px #4AAEEE}
 
+.WhiteBox {position:absolute;left:-150px;top:900px;width:902px;Height:1000px;background-color:white;z-index:10;}
+.AboutTitle H1 {position:relative; left:160px;top:-30px;color:black;width:240px;black;font-family:"calibri";border-bottom: 10px solid #000;}
+.AboutTitle u  {font-weight:bold;}
+.AboutText {position:relative;width:600px;left:160px;}
+.AboutText p {color:black;font-family:"calibri";font-size:22px;position:relative;top:-50px;}
 
+.AlishaPic {position:absolute;top:935px;left:752px;}
+.AlishaPic img {height:965px;width:715px}
 </style>
 </head>
 
@@ -170,7 +150,31 @@
 <div class="pageContainer">
 
 
+<div class="WhiteBox">
+<div class="AboutTitle">
+<H1>ABOUT</H1>
+</div>
+<div class="AboutText">
+<p> In March 2014,Red Devils Sim Racing was established, to test the limits of the competitive nature that pushes forward every sim racer..... every form of racecar driver 
+    actually....ever sportsperson we suppose....you get the idea. We believe it is important to develop the ability to find a strong mix of competitive nature between teammates
+    and other drivers, collaboration and proffesionalism. Once this can be mastered by all involved then upward progression will be
+    neverending. Strong support along with mastering how to focus and concentrate competive nature on the task at hand instead of aimlessly trying to progress could only be
+    for the better of everyone involved we thought, so we decided to put the theory into practice. </p>
+<p> By the closing stages of 2014, we had experienced superb development from the team members, leading to breaking lap records and successful attempts at obtaining pro licences!
+    This opened the opportunity to recruit many rising stars from a range of different series from across the globe to help ensure that they could reach their personal potentials 
+    by learning from our key values and beliefs for progression in sim racing, who can now teach others. This has led to 
+    wider recognition throughout sim racing along with multiple championship victories across a variety of series along with very strong showings at a variety of Iracing special 
+    events and prestigious league series.</p>
+<p> The history looks bright, but the future looks even brighter! Happy Racing!</p>
+<p> 2014 |<b> ESTABLISHED</b>&nbsp;&nbsp; &nbsp;      500+ |<b> WINS</b>&nbsp; &nbsp; &nbsp;     10 |<b> CHAMPIONSHIPS</b></p> 
+<p style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1 |<b>TEAM</b></p>
+</div>
+</div>
 
+<div class="AlishaPic">
+<a href="http://www.alisharoland.com/"target="_top">
+<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/AlishaPic_zpspzgrjzyw.png" border="0" alt=" photo AlishaPic_zpspzgrjzyw.png"/></a>
+</div>
 
 <!-- DRIVERS SECTION -->
 <div class="DriversHeading">
@@ -416,38 +420,30 @@
 
 
 <!-- <div class= "wrapper">
-
 <div class= "RacespotTV">
 <a href="https://www.youtube.com/user/hdracespot"target="_top"> 
 <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/Racespot%20TV_zps7nlwi970.png" border="0" alt=" photo Racespot TV_zps7nlwi970.png"/></a>
 </div>
-
 <div class= "RRTVLogo">
 <a href ="https://www.youtube.com/channel/UCTcz_Na2BWwtp9pHd5cYDGA"target="_top">
 <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/RRTV_zpsqgywmpzd.jpg" border="0" alt=" photo RRTV_zpsqgywmpzd.jpg"/></a>
 </div>
-
-
 <div class="WorldCup">
 <a href="https://www.youtube.com/user/hdracespot"target="_top"> 
 <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/2K%20World%20Cup_zpsygnuqodq.png" border="0" alt=" photo 2K World Cup_zpsygnuqodq.png"/></a>
 </div>
-
 <div class="BSRTV">
 <a href="https://www.youtube.com/user/britishsimracers"target="_top">
 <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/BSR%20TV_zpsuonprnnu.png" border="0" alt=" photo BSR TV_zpsuonprnnu.png"/></a>
 </div>
-
 <div class = "AORTV">
 <a href="https://www.youtube.com/user/kokiko22"target="_top">
 <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/AOR%20Logo_zps50qrprc0.png" border="0" alt=" photo AOR Logo_zps50qrprc0.png"/></a>
 </div>
-
 <div class= "GSRCTV">
 <a href="https://www.youtube.com/user/GSRCBroadcasting"target="_top">
 <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/GSRC%20TV_zpskphwfjbf.png" border="0" alt=" photo GSRC TV_zpskphwfjbf.png"/></a>
 </div>
-
 </div> -->
 
 
@@ -674,7 +670,6 @@
         .jssorb05 div:hover, .jssorb05 .av:hover { background-position: -37px -7px; }
         .jssorb05 .av { background-position: -67px -7px; }
         .jssorb05 .dn, .jssorb05 .dn:hover { background-position: -97px -7px; }
-
         /* jssor slider arrow navigator skin 22 css */
         /*
         .jssora22l                  (normal)
@@ -783,4 +778,3 @@
 </div>
 </Body>
 </html>
-
