--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 <div class="pageContainer">
 
 
-<div class="WhiteBox">
+ <div class="WhiteBox">
 <div class="AboutTitle">
-<H1>ABOUT</H1>
+  <a href="#AboutLink"><H1>ABOUT</H1></a>
 </div>
 <div class="AboutText">
 <p> In March 2014,Red Devils Sim Racing was established, to test the limits of the competitive nature that pushes forward every sim racer..... every form of racecar driver 
@@ -483,7 +483,7 @@
 </div>
 
 <div class="SponsorsPage">
-  <li><a href="#">Team Sponsors</a></li>
+  <li><a href="#AboutLink">About</a></li>
 </div>
 
 <div class="JoinUsPage">
