--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 
 
  <div class="WhiteBox">
-<div class="AboutTitle">
- <H1 id="AboutLink">ABOUT</H1>
+<div class="AboutTitle" id="AboutLink">
+ <H1>ABOUT</H1>
 </div>
 <div class="AboutText">
 <p> In March 2014,Red Devils Sim Racing was established, to test the limits of the competitive nature that pushes forward every sim racer..... every form of racecar driver 
