--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
      .photoContainer  a img:hover {border:solid 7px #4AAEEE}
 
 .WhiteBox {position:absolute;left:-150px;top:900px;width:902px;Height:1000px;background-color:white;z-index:10;}
-.AboutTitle H1 {position:relative; left:160px;top:-30px;color:black;width:240px;black;font-family:"calibri";border-bottom: 10px solid #000;}
+.AboutTitle H1 {position:relative; left:160px;top:-30px;color:gray;width:240px;black;font-family:"calibri";border-bottom: 10px solid #000;}
 .AboutTitle u  {font-weight:bold;}
 .AboutText {position:relative;width:600px;left:160px;}
 .AboutText p {color:black;font-family:"calibri";font-size:22px;position:relative;top:-50px;}
