--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 .AboutText p {color:black;font-family:"calibri";font-size:22px;position:relative;top:-50px;}
 
 .AlishaPic {position:absolute;top:935px;left:752px;}
-.AlishaPic img {height:975px;width:715px}
+.AlishaPic img {height:925px;width:715px}
 </style>
 </head>
 
@@ -167,7 +167,7 @@
     events and prestigious league series.</p>
 <p> The history looks bright, but the future looks even brighter! Happy Racing!</p>
 <p> 2014 |<b> ESTABLISHED</b>&nbsp;&nbsp; &nbsp;      500+ |<b> WINS</b>&nbsp; &nbsp; &nbsp;     10 |<b> CHAMPIONSHIPS</b></p> 
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1 |<b>TEAM</b></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1 |<b>TEAM</b></p>
 </div>
 </div>
 
