--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@
 <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/DM%20FW31%20S3%202012_zpskdlw0rb9.png" border="0" alt=" photo DM FW31 S3 2012_zpskdlw0rb9.png"/>
 <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/CertificateTHStarMazdaS32014_zps1p3viqx7.png" border="0" alt=" photo CertificateTHStarMazdaS32014_zps1p3viqx7.png"/>
     
+    </div>
+    </div>
 <!-- MEDIA SECTION -->
 <div class="MediaHeader">
 <H1>MEDIA </H1>
@@ -577,5 +579,7 @@
 </div>
 </div>
 </div>
+    </div>
+    </div>
 </Body>
 </html>
