--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <body bgcolor= #161616>
 <div class="Banner">
 <a href="http://reddevilssimracing.co.uk">
-<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/aaa_zpskbd5t8mq.jpg"/></a>
+<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/aaa_zpskbd5t8mq.jpg" border="0" alt=" photo aaa_zpskbd5t8mq.jpg"/></a>
 </div>
 <div class="twitterlogo">
 <a href="https://twitter.com/RedDevilsSimRC"target="_top">
