--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 </div>
 <div class="twitterlogo">
 <a href="https://twitter.com/RedDevilsSimRC"target="_top">
-<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/aaa_zpslfzzusfi.png" border="0" alt=" photo Twitter Logo_zpsnvugs2cx.png"/></a>
+<img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/Twitter%20Logo_zpsnvugs2cx.png" border="0" alt=" photo Twitter Logo_zpsnvugs2cx.png"/></a>
 </div>
 <!-- DRIVERS SECTION -->
 <div class="DriversHeading">
