--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 </div>
     <div class="Banner">
 <a href="http://reddevilssimracing.co.uk">
-    <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/aaa_zpslfzzusfi.png" border="0" alt=" photo aaa_zpslfzzusfi.png"/></a>"/></a>
+    <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/aaa_zpslfzzusfi.png" border="0" alt=" photo aaa_zpslfzzusfi.png"/></a>"/>
 </div>
 <div class="twitterlogo">
 <a href="https://twitter.com/RedDevilsSimRC"target="_top">
