--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
  </div>
  <div class="tilt">
  <div class="photoContainer">
-   <img id="AR8" src="http://i1273.photobucket.com/albums/y406/DJMorris1997/Pic1_%20%20AudiR8-min_zpsu33mnscf.jpg" alt="Audi R8 photo"/>
+   <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/Pic1_%20%20AudiR8-min_zpsu33mnscf.jpg" alt="Audi R8 photo"/>
    <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/Pic1_%20%20Mazda%20MX5-min_zpsdxlowdz3.jpg" border="0" alt=" photo Pic1_  Mazda MX5-min_zpsdxlowdz3.jpg"/>
    <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/Pic1_%20%20Formula%20Renault2.0-min_zpsph5kklye.jpg" border="0" alt=" photo Pic1_  Formula Renault2.0-min_zpsph5kklye.jpg"/>
    <img src="http://i1273.photobucket.com/albums/y406/DJMorris1997/Pic1_%20Mercedes%20GT3-min_zpsa40fehjm.jpg" border="0" alt=" photo Pic1_ Mercedes GT3-min_zpsa40fehjm.jpg"/>
@@ -521,7 +521,7 @@
         .jssora22r.jssora22rdn { background-position: -310px -31px; }
     </style>
     
-    <div id="jssor_1" style="position: relative; margin: 0 auto; top: 235px; right:4px; width: 500px; height: 300px; overflow: hidden; visibility: hidden;">
+    <div id="jssor_1" style="position: relative; margin: 0 auto; top: 255px; right:4px; width: 500px; height: 300px; overflow: hidden; visibility: hidden;">
         <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 500px; height: 300px; overflow: hidden;">
             <div data-b="0" data-p="170.00" data-po="80% 55%" style="display: none;">
                 <img data-u="image"src="http://i1273.photobucket.com/albums/y406/DJMorris1997/Home%20Page%20intro%20pic-min_zpsy5sryjtf.jpg"/>
