--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title> Red Devils Sim Racing: Welcome To The Future of Sim Racing </title>
-<meta name="viewport" content="initial-scale=0.8, zoom=10%, width=device-width, target-densitydpi=high-dpi">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 
 
