--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
      .videos {padding-left:50px; padding-top:20px;padding-bottom:300px;position:absolute;position:relative;bottom:320px;background-color:black}   
 
      
-     .WhiteBox {width:750px;Height:1000px;background-color:white;z-index:10;float:left;}
+     .WhiteBox {width:750px;Height:1000px;background-color:white;z-index:10;float:left;box-sizing:border-box;}
      .AboutTitle H1 {position:relative; left:50px;top:-40px;color:gray;width:240px;font-family:"calibri";border-bottom: 10px solid gray; text-decoration:none;}
      .AboutTitle u  {font-weight:bold;}
      .AboutText {position:relative;width:648px;left:50px;}
@@ -102,10 +102,10 @@
      .FactBoxContainer {font-family:sans-serif;}
      .FactBoxContainer H3 {font-size:20px;}
      .FactBoxContainer H2 {font-size:40px;}
-     .FactBox1Container {position:relative;top:60px;left:20px;}
-     .FactBox2Container {position:relative;top:60px;left:20px;}
-     .FactBox3Container {position:relative;top:60px;left:20px;}
-     .FactBox4Container {position:relative;top:60px;left:20px;}
+     .FactBox1Container {position:relative;top:60px;left:20px; box-sizing:border-box;}
+     .FactBox2Container {position:relative;top:60px;left:20px; box-sizing:border-box;}
+     .FactBox3Container {position:relative;top:60px;left:20px; box-sizing:border-box;}
+     .FactBox4Container {position:relative;top:60px;left:20px; box-sizing:border-box;}
 
      .DriversMover {position:relative; left:20px;}
      .GalleryMover {position:relative; left:20px;}
