--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 
   
   
-     @media screen and (max-width: 1400px){.pageContainer{width:100%; height:25000px;} .Drivers{width:100%;} .DriversHeader{width:100%;}  .photoContainer{width:100%;} .AllCertificates{width:100%;} .CertificatesHeader{width:100%;} .GalleryHeader H1{width:100%;}
+     @media screen and (max-width: 1400px){.pageContainer{width:100%; height:25000px;} .Drivers{width:100%;} .DriversHeader{width:100%;}  .photoContainer{width:100%;} .AllCertificates{width:100%;} .CertificatesHeader{width:100%;} .GalleryHeader H1{width:100%;} }
      
      @media screen and (max-width: 1400px){.FactBox1{width:50%} .FactBox2{width:50%} .FactBox3{width:50%} .FactBox4{width:50%}}
      @media screen and (max-width: 1300px){.FactBox1{width:25%} .FactBox2{width:25%} .FactBox3{width:25%} .FactBox4{width:25%}}
-     @media screen and (max-width: 1000px){ .AlishaPic {display:none;} .WhiteBox {width:100%;height:800px;}.AboutText {width:100%} .AboutText p {width:87%} .NewContainer{width:100%}  nav ul li{width:100%; box-sizing:border-box;} .MyNav{z-index:1000;} nav ul{height:700px;max-height:0px;} .showing{max-height:700px;} .handle{display:block;}.TeamLogo img {height:95px; width:85px;display:inline-block;} }
+     @media screen and (max-width: 1000px){ .AlishaPic {display:none;} .AlishaPic img{display:none;}.WhiteBox {width:100%; height:800px;} .AboutText {width:100%} .AboutText p {width:87%} .NewContainer{width:100%}  nav ul li{width:100%; box-sizing:border-box;} .MyNav{z-index:1000;} nav ul{height:700px;max-height:0px;} .showing{max-height:700px;} .handle{display:block;}.TeamLogo img {height:95px; width:85px;display:inline-block;} }
      @media screen and (max-width: 800px){.FactBox1{width:50%} .FactBox2{width:50%} .FactBox3{width:50%} .FactBox4{width:50%} .DriversHeader H1{padding-right:20px;} .WhiteBox {height:1000px;} .AboutText p {position:relative;right:30px;} 
      @media screen and (max-width: 600px){iframe {width:280px; height:157px;}.WhiteBox {height:1200px;}      .FactBoxContainer H3 {font-size:15px; position:relative; bottom:40px;} .FactBox1{height:150px;} .FactBox2{height:150px;}  .FactBox3{height:150px;} .FactBox4{height:150px;}.FactBoxContainer H2 {font-size:25px;position:relative;bottom:40px;}}
      @media screen and (max-width:500px){ .AboutTitle {position:relative; right:30px;} .photoContainer img {height:225px;width:387px;border:3px solid white;}   .AllCertificates img{height:280px; width:380px;}.WhiteBox {height:1500px;} .DriversHeader H1{position:relative;right:40px; bottom:10px;} .GalleryHeader H1{position:relative;right:40px; bottom:10px;} .CertificatesHeader H1{position:relative;right:40px; bottom:10px;}.MediaHeader H1{position:relative;right:40px; bottom:10px;} 
