--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
      
      .WhiteBox {width:750px;Height:1000px;background-color:white;z-index:10;float:left;box-sizing:border-box;}
-     .AboutTitle H1 {position:relative; left:50px;top:-40px;color:gray;width:240px;font-family:"calibri";border-bottom: 10px solid gray; text-decoration:none;}
+     .AboutTitle H1 {position:relative; left:50px;top:-40px;color:gray;width:240px;font-family:"arial";border-bottom: 10px solid gray; text-decoration:none;}
      .AboutTitle u  {font-weight:bold;}
      .AboutText {position:relative;width:648px;left:50px;}
-     .AboutText p {color:black;font-family:"calibri";font-size:22px;position:relative;top:-80px;}
+     .AboutText p {color:black;font-family:"arial";font-size:22px;position:relative;top:-80px;}
      .NewContainer {display:inline-block;width:1500px;}
      .AlishaPic img {height:1005px;width:715px;float:left;position:relative;}
     
