--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
      .FactBox3{background-color:#ED3E3E; color:white;width:242.01px;height:293.90px;display:inline-box; float:left;}
      .FactBox4{background-color:#ED3E3E; color:white;width:242.01px;height:293.90px;display:inline-box; float:left;}
 
-     .FactBoxContainer {font-family:sans-serif;}
+     .FactBoxContainer {font-family:"arial";}
      .FactBoxContainer H3 {font-size:20px;}
      .FactBoxContainer H2 {font-size:40px;}
      .FactBox1Container {position:relative;top:60px;left:20px; box-sizing:border-box;}
