--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
    <div class= "MyNav" id="LinkHome">
    <nav>
      <ul>
-        <a href="https://twitter.com/RedDevilsSimRC"><li id="LiHome">HOME</li></a>
+        <a href="#LiHome"><li id="LiHome">HOME</li></a>
         <a href="#LinkAbout"><li id="LiAbout">ABOUT</li></a>
         <a href="#LinkDrivers"><li id="LiDrivers">DRIVERS</li></a>
         <a href="#LinkGallery"><li id="LiGallery">GALLERY</li></a>
