--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <a href="#LinkGallery"><li id="LiGallery">GALLERY</li></a>
         <a href="#LinkSuccess"><li id="LiSuccess">SUCCESS</li></a>
         <a href="#LinkMedia"><li id="LiMedia">MEDIA</li></a>
-        <a href="https://twitter.com/RedDevilsSimRC"><li>FORUM</li></a>
+        <a href="https://twitter.com/RedDevilsSimRC" target="_top"><li>FORUM</li></a>
     </ul>
        <div class="handle" div id="LiMenu"><div class="container" onclick="myFunction(this)">
   <div class="bar1"></div>
@@ -434,13 +434,12 @@
     <!-- #endregion Jssor Slider End -->
 
     <div class="FactBoxContainer">
-       <a href="https://twitter.com/RedDevilsSimRC">
     <div class="FactBox1">
     <div class="FactBox1Container">
      <H3> ESTABLISHED </H3>
      <H2> 2014 </H2>
     </div>
-    </div> </a>
+    </div> 
 
    <div class="FactBox2">
    <div class="FactBox2Container">
