--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <a href="#LinkGallery"><li id="LiGallery">GALLERY</li></a>
         <a href="#LinkSuccess"><li id="LiSuccess">SUCCESS</li></a>
         <a href="#LinkMedia"><li id="LiMedia">MEDIA</li></a>
-        <a href="reddevilutionracing.freeforums.net" target="_top"><li>FORUM</li></a>
+        <a href="http://reddevilutionracing.freeforums.net/" target="_top"><li>FORUM</li></a>
     </ul>
        <div class="handle" div id="LiMenu"><div class="container" onclick="myFunction(this)">
   <div class="bar1"></div>
