--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
      a {text-decoration:none; color:white;}
      .handle {width:100%; box-sizing:border-box; background-color:red; cursor:pointer; color:white; display:none;padding:20px; font-family: sans-serif;height:100px;position:relative; padding-top:30px;border-right: 0.5px solid light-grey; margin:0;text-align:right;}
      .handle:hover {background-color:#ED3E3E;}
-     .TeamLogo img {height:140px; width:125px; position: absolute;z-index:100; left:20px;}
+     .TeamLogo img {height:140px; width:125px; position: absolute;z-index:100; left:20px; -webkit-filter: drop-shadow(2px 2px 2px black); -moz-filter: drop-shadow(2px 2px 2px black); -o-filter: drop-shadow(2px 2px 2px black); filter: drop-shadow(2px 2px 2px black);}
      .TwitterLogo img {height:65px; width:65px; position: absolute;z-index:100; left:14%; top:75px; 
      	-webkit-filter: brightness(0) invert(1);
         -webkit-transition: .5s ease-in-out;
